--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: python
 python:
     - "3.7"
-install:
-    - "pip install coverage"
-    - "pip install coveralls"
+script:
+  - python tests.py
