--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
     - "3.7"
 install:
-    - "pip install pytest"
+    - "pip install coveralls"
 script:
-  - pytest test.py
+  - python test.py
+  - coverage run test.py
+after_success: coveralls
